# Qindows

./: .gitignore  README.md  Skill.md  index.html
qindows/: .gitignore  ARCHITECTURE.md  Cargo.toml  Makefile  boot-qemu.sh  build-linux.sh  build.sh  parsed_qemu_test.txt  parsed_qemu_test2.txt  parsed_qemu_test6.txt  run.sh  run_qemu.sh  x86_64-qindows.json
qindows/.cargo/: config.toml
qindows/aether/: Cargo.toml
qindows/aether/src/: a11y.rs  accessibility.rs  animation.rs  animations.rs  audio_mix.rs  clipboard.rs  clipboard_mgr.rs  context_menu.rs  display_profiles.rs  dnd.rs  drag_drop.rs  elastic.rs  file_picker.rs  focus_manager.rs  font.rs  font_render.rs  gesture_nav.rs  gestures.rs  input.rs  intent_ui.rs  layout.rs  lib.rs  lockscreen.rs  math_ext.rs  notif_center.rs  notification_bus.rs  notifications.rs  power_overlay.rs  qkit.rs  qnotify.rs  qperm.rs  qsync.rs  qthumbnail.rs  renderer.rs  screenshot.rs  taskbar.rs  theme.rs  theme_engine.rs  themes.rs  tiling.rs  (+4 more)
qindows/bootloader/: Cargo.toml  build.rs
qindows/bootloader/src/: main.rs
qindows/chimera/: Cargo.toml
qindows/chimera/src/: acl_bridge.rs  bluetooth.rs  clipboard_bridge.rs  com.rs  com_interop.rs  d3d_compute.rs  d3d_shim.rs  dll_resolver.rs  dxgkrnl_shim.rs  font_mapper.rs  gdi.rs  lib.rs  ntdll.rs  pe_loader.rs  qbridge.rs  (+9 more)
qindows/nexus/: Cargo.toml
qindows/prism/: Cargo.toml
qindows/q-shell/: Cargo.toml  build_shell.sh  linker.ld
qindows/qernel/: Cargo.toml  linker.ld
qindows/qindows-types/: Cargo.toml
qindows/sentinel/: Cargo.toml
qindows/synapse/: Cargo.toml
(+544 files in other folders)
