[package]
name = "qernel"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "The Qindows Microkernel — Memory-safe, minimal, Rust-native"

[dependencies]
spin = { workspace = true }
bitflags = { workspace = true }
log = { workspace = true }
libm = { workspace = true }
qindows-types = { workspace = true }
aether = { path = "../aether" }
q-shell = { path = "../q-shell" }
